// Productos concretos
public class PdfDocument implements Document {
    public void print() {
        System.out.println("Imprimiendo documento PDF");
    }
}
