// Productos concretos

public class WordDocument implements Document {
    public void print() {
        System.out.println("Imprimiendo documento Word");
    }
}
