interface Document {
    void print();
}